--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/index.css">
     <link rel="shortcut icon" href="icones/oie_7TZtpCUaslPH.jpg" type="image/x-icon">
     <title>Timeup</title>
 </head>
@@ -17,8 +17,8 @@
             <a href="#">Inicio</a>
             <a href="#">Menu</a>
             <a href="#">Contato</a>
-            <a href="login.php">Login</a>
-            <a href="cadastro.php">Cadastro</a>
+            <a href="cliente/LoginCliente.php">Login</a>
+            <a href="cliente/CadastroCliente.php">Cadastro</a>
         </nav>
     </header>
     <main>
